# kaleidoscope-llvm

./: .gitignore  CMakeLists.txt  Makefile  README.md
.plan/: 01_lexer.md  02_parser.md  03_codegen.md  04_jit_optimizer.md  05_control_flow.md  06_user_operators.md  07_mutable_variables.md  08_object_code.md  09_debug_info.md  10_conclusion.md  README.md
.research/: code-explanation.md  control-flow-impl.md  deep-analysis.md
include/: ast.hpp  codegen.hpp  jit.hpp  lexer.hpp  optimizer.hpp  parser.hpp
src/: codegen.cpp  jit.cpp  lexer.cpp  main.cpp  optimizer.cpp  parser.cpp
